Refactorizacion de codigo js
Resolve: T#002

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +20,18 @@
     <h1 class="mainTitle">Soportes</h1>
 
     <div class="cntMain">
-        <table id="ct" class="mainTable">
+        <table class="mainTable">
+            <thead>
+                <tr>
+                    <th class="mainTable--th">FECHA</th>
+                    <th class="mainTable--th">DIA</th>
+                    <th class="mainTable--th">HORA</th>
+                    <th class="mainTable--th">CLIENTE</th>
+                    <th class="mainTable--th thDescripcion">DESCRIPCION</th>
+                </tr>
+            </thead>
+            <tbody id="ct">
+            </tbody>
         </table>
     </div>
 
