Agregado de estilos en sass
Resolve: T#0007

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1 class="mainTitle">Soportes</h1>
     </div>
 
-    <div class="cntMain">
+    <div class="cntSupports">
         <div class="cntInputDate mb-1">
             <label class="labelDate" for="start">Start date:</label>
             <input class="inputDate" type="date" id="inputDate" name="trip-start">
